BE/EXST/API: Modificato il timer per essere configurabile + aggiunta di un Pop-Up per il POST-Survey (non per il pre-survey)
(30min solo quando l'utente sta vedendo reddit? oppure 7 giorni generali indipendentemente dalla piattaforma?
